[gd_scene load_steps=13 format=2]

[ext_resource path="res://map/PathNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://map/path_area.gd" type="Script" id=2]
[ext_resource path="res://map/path.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 36 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 36, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 56, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 56, 16 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 16 )

[node name="PathTwo" type="Node2D"]
script = ExtResource( 3 )

[node name="PathArea" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PathFaces" type="Node2D" parent="PathArea"]

[node name="PathFace" parent="PathArea/PathFaces" instance=ExtResource( 1 )]

[node name="PathFace2" parent="PathArea/PathFaces" instance=ExtResource( 1 )]
position = Vector2( 0, -40 )

[node name="PathFace3" parent="PathArea/PathFaces" instance=ExtResource( 1 )]
position = Vector2( 40, -40 )

[node name="PathFace4" parent="PathArea/PathFaces" instance=ExtResource( 1 )]
position = Vector2( 80, -40 )

[node name="PathFace5" parent="PathArea/PathFaces" instance=ExtResource( 1 )]
position = Vector2( -40, 0 )

[node name="PathFace6" parent="PathArea/PathFaces" instance=ExtResource( 1 )]
position = Vector2( -80, 0 )

[node name="PathCollision" type="CollisionShape2D" parent="PathArea"]
position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="PathCollision2" type="CollisionShape2D" parent="PathArea"]
position = Vector2( -56, 0 )
shape = SubResource( 2 )

[node name="PathCollision3" type="CollisionShape2D" parent="PathArea"]
position = Vector2( 56, -40 )
shape = SubResource( 3 )

[node name="OutsideArea" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="OutsideCollision" type="CollisionShape2D" parent="OutsideArea"]
position = Vector2( -60, -40 )
shape = SubResource( 4 )

[node name="OutsideCollision2" type="CollisionShape2D" parent="OutsideArea"]
position = Vector2( 60, 0 )
shape = SubResource( 5 )

[node name="OutsideCollision3" type="CollisionShape2D" parent="OutsideArea"]
position = Vector2( 40, -80 )
shape = SubResource( 6 )

[node name="OutsideCollision4" type="CollisionShape2D" parent="OutsideArea"]
position = Vector2( -40, 40 )
shape = SubResource( 7 )

[node name="OutsideCollision5" type="CollisionShape2D" parent="OutsideArea"]
position = Vector2( -120, 0 )
shape = SubResource( 8 )

[node name="OutsideCollision6" type="CollisionShape2D" parent="OutsideArea"]
position = Vector2( 120, -40 )
shape = SubResource( 9 )
